Fix null safety warning in ClientService + test adjustments