@@ -1,17 +1,23 @@
 package com.example.clientmanager.dto;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Component;
 
 import com.example.clientmanager.model.Address;
 import com.example.clientmanager.model.Client;
 
+@Component
 public class ClientMapper {
 
-    public static ClientDto toDto(Client client) {
-        List<AddressDto> addresses = client.getAddresses().stream()
-                .map(ClientMapper::toDto)
-                .collect(Collectors.toList());
+    // ENTITY -> DTO
+    public ClientDto toDto(Client client) {
+        List<AddressDto> addresses = client.getAddresses() == null
+                ? List.of()
+                : client.getAddresses()
+                        .stream()
+                        .map(this::toDto)
+                        .toList();
 
         return new ClientDto(
                 client.getId(),
@@ -21,7 +27,7 @@ public class ClientMapper {
         );
     }
 
-   public static AddressDto toDto(Address address) {
+    public AddressDto toDto(Address address) {
         return new AddressDto(
                 address.getId(),
                 address.getStreet(),
@@ -29,22 +35,24 @@ public class ClientMapper {
         );
     }
 
-    // DTO -> Entity
-    public static Client toEntity(ClientDto dto) {
+    // DTO -> ENTITY
+    public Client toEntity(ClientDto dto) {
         Client client = new Client();
         client.setId(dto.id());
         client.setName(dto.name());
         client.setEmail(dto.email());
 
         if (dto.addresses() != null) {
-            dto.addresses().stream()
-                    .map(ClientMapper::toEntity)
+            dto.addresses()
+                    .stream()
+                    .map(this::toEntity)
                     .forEach(client::addAddress);
         }
+
         return client;
     }
 
-    public static Address toEntity(AddressDto dto) {
+    public Address toEntity(AddressDto dto) {
         Address address = new Address();
         address.setId(dto.id());
         address.setStreet(dto.street());
