@@ -2,8 +2,9 @@ package com.example.clientmanager.service;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
-
+import java.util.Optional;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -16,28 +17,33 @@ import com.example.clientmanager.repository.ClientRepository;
 @Transactional(readOnly = true)
 @Service
 public class ClientService {
+    private static final Logger log = LoggerFactory.getLogger(ClientService.class);
 
     private final ClientRepository clientRepository;
+    private final ClientMapper clientMapper;
 
-    public ClientService(ClientRepository clientRepository) {
+    public ClientService(ClientRepository clientRepository, ClientMapper clientMapper) {
         this.clientRepository = clientRepository;
+        this.clientMapper = clientMapper;
     }
-
     // -------------------------
     // CREAR CLIENT
     // -------------------------
     @Transactional
     public ClientDto createClient(ClientDto clientDto) {
+        log.debug("Intentant crear client: {}", clientDto);
+
         Objects.requireNonNull(clientDto, "ClientDto no pot ser null");
 
         // Transformar DTO a entitat
-        Client clientEntity = ClientMapper.toEntity(clientDto);
+        Client clientEntity = clientMapper.toEntity(clientDto);
 
         // Guardar a la base de dades
         Client savedClient = clientRepository.save(Objects.requireNonNull(clientEntity));
+        log.info("Client creat correctament amb id={}", savedClient.getId());
 
         // Transformar a DTO per retornar
-        return ClientMapper.toDto(savedClient);
+        return clientMapper.toDto(savedClient);
     }
 
   
@@ -46,31 +52,45 @@ public class ClientService {
     public ClientDto createClient(String name, String email) {
         Objects.requireNonNull(name, "El nom no pot ser null");
         Objects.requireNonNull(email, "L'email no pot ser null");
+        log.debug("Intentant crear client: name={} email={}", name,email);
 
-        ClientDto dto = new ClientDto(null, name, email, null);
-        return createClient(dto);
+        return createClient(new ClientDto(null, name, email, null));
+    }
+
+    public List<ClientDto> findByNameOrEmail(String query) {
+        log.debug("Buscant client amb query={}", query);
+
+         List<Client> clients =
+            clientRepository.findByNameIgnoreCaseContainingOrEmailIgnoreCaseContaining(query, query);
+
+    return clients.stream()
+            .map(clientMapper::toDto)
+            .toList();
     }
 
     // -------------------------
     // TROBAR TOTS ELS CLIENTS
     // -------------------------
     public List<ClientDto> getAllClients() {
+        log.debug("Buscant tots els clients");
+
         return clientRepository.findAll()
                 .stream()
-                .map(ClientMapper::toDto)
-                .collect(Collectors.toList());
+                .map(clientMapper::toDto)
+                .toList(); // Java 16+, si no Collectors.toList()
     }
 
     // -------------------------
     // TROBAR PER ID
     // -------------------------
     public ClientDto findById(Long id) {
+        log.debug("Buscant client amb id={}", id);
+
         Objects.requireNonNull(id, "L'id no pot ser null");
 
-        Client client = clientRepository.findById(id)
+        return clientRepository.findById(id)
+                .map(clientMapper::toDto)
                 .orElseThrow(() -> new ClientNotFoundException(id));
-
-        return ClientMapper.toDto(client);
     }
 
      // -------------------------
@@ -80,6 +100,7 @@ public class ClientService {
     public ClientDto update(Long id, ClientDto clientDto) {
         Objects.requireNonNull(id, "L'id no pot ser null");
         Objects.requireNonNull(clientDto, "ClientDto no pot ser null");
+        log.debug("Modificant client amb id={}", id);
 
         Client existingClient = clientRepository.findById(id)
                 .orElseThrow(() -> new ClientNotFoundException(id));
@@ -91,7 +112,7 @@ public class ClientService {
         // Guardar entitat actualitzada
         Client updatedClient = clientRepository.save(existingClient);
 
-        return ClientMapper.toDto(updatedClient);
+        return clientMapper.toDto(updatedClient);
     }
     
     // -------------------------
@@ -99,7 +120,8 @@ public class ClientService {
     // -------------------------
     @Transactional
     public void delete(Long id) {
-        
+        log.debug("Suprimint client amb id={}", id);
+
         Objects.requireNonNull(id, "L'id no pot ser null");
 
         Client client = Objects.requireNonNull(
